--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # Core
 streamlit==1.28.0
-pandas==2.0.3
+pandas==2.1.4
 
-# ML and NLP
-spacy==3.5.3
-numpy==1.24.3
+# SpaCy and NLP
+spacy[transformers,lookups]==3.5.3
+numpy==1.26.2
 thinc==8.1.12
 
 # Database
@@ -14,5 +14,6 @@ sqlalchemy==2.0.23
 scikit-learn==1.3.0
 python-dateutil==2.8.2
 
-# Install spaCy model
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz
+# Install spaCy models
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz#egg=en_core_web_sm==3.5.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.5.0/en_core_web_lg-3.5.0.tar.gz#egg=en_core_web_lg==3.5.0
