--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Core
 streamlit==1.28.0
-pandas==2.1.4
+pandas==2.0.3
 
-# SpaCy and NLP
-spacy[transformers,lookups]==3.5.3
-numpy==1.26.2
-thinc==8.1.12
+# ML and NLP - pinned to older versions for compatibility
+spacy==3.4.4
+thinc==8.1.10
+numpy==1.23.5
 
 # Database
 sqlalchemy==2.0.23
@@ -14,6 +14,5 @@ sqlalchemy==2.0.23
 scikit-learn==1.3.0
 python-dateutil==2.8.2
 
-# Install spaCy models
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz#egg=en_core_web_sm==3.5.0
-https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.5.0/en_core_web_lg-3.5.0.tar.gz#egg=en_core_web_lg==3.5.0
+# Install spaCy model (matching spaCy version)
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.1/en_core_web_sm-3.4.1.tar.gz#egg=en_core_web_sm==3.4.1
