--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-# Core
+# Core requirements
 streamlit==1.28.0
 pandas==2.0.3
 
-# ML and NLP - pinned to older versions for compatibility
+# NLP and Machine Learning
 spacy==3.4.4
 thinc==8.1.10
+scikit-learn==1.3.0
 numpy==1.23.5
 
-# Database
+# Database handling
 sqlalchemy==2.0.23
 
-# Additional
-scikit-learn==1.3.0
+# Additional utilities
 python-dateutil==2.8.2
 
 # Install spaCy model (matching spaCy version)
