--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,30 @@
-streamlit>=1.24.0
-spacy>=3.5.0
-python-dotenv>=1.0.0
-pandas>=2.0.0
+# Core web framework
+streamlit>=1.28.0
+
+# NLP and ML
+spacy>=3.7.2
+spacy-transformers>=1.3.4
+torch>=2.1.0
+
+# Data handling
+pandas>=2.1.0
 numpy>=1.24.0
-sqlalchemy>=2.0.0
+
+# Database
+sqlite3-dbapi>=1.0.3
+
+# File handling and utilities
+python-dotenv>=1.0.0
+pathlib>=1.0.1
+
+# UI enhancements
+streamlit-drawable-canvas>=0.9.3
+streamlit-nested-layout>=0.1.1
+
+# Development and testing
+black>=23.9.1
+pytest>=7.4.2
+pylint>=3.0.1
+
+# Optional GPU support
+cupy-cuda12x>=12.2.0  # Only if using CUDA 12
